Flexbox containers and items with all attributes, examples

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
         />
         <div class="external-links">
           <a href="https://www.google.com" target="_blank">Visit Example</a>
-          <a href="/about.html" target="_blank">Visit Test Page</a>
+          <a href="flexbox.html">Visit flexbox page</a>
+          <a href="/about.html">Visit Test Page</a>
         </div>
       </section>
       <!-- Navigation Section -->
