Added grid example to lecture notes

--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
         <div class="external-links">
           <a href="https://www.google.com" target="_blank">Visit Example</a>
           <a href="flexbox.html">Visit flexbox page</a>
+          <a href="grid.html">Visit grid page</a>
           <a href="/about.html">Visit Test Page</a>
         </div>
       </section>
+      <iframe src="grid.html" height="500" width="500" frameborder="0"></iframe>
       <!-- Navigation Section -->
       <nav class="search-engines-nav">
         <h2>My favorite search engines</h2>
