Föreläsning 7 och 8, transitions och animation

--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
 
     <!-- Main Content -->
     <main>
+      <p class="base-text">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. A nulla omnis,
+        rerum veritatis quis aperiam unde recusandae consectetur cupiditate nisi
+        assumenda, provident fugiat in nobis excepturi numquam ipsam, voluptates
+        odio.
+      </p>
       <!-- Image and Links Section -->
       <section class="intro-section">
         <img
@@ -33,7 +39,7 @@
           <a href="/about.html">Visit Test Page</a>
         </div>
       </section>
-      <iframe src="grid.html" height="500" width="500" frameborder="0"></iframe>
+      <!-- <iframe src="grid.html" height="500" width="500" frameborder="0"></iframe> -->
       <!-- Navigation Section -->
       <nav class="search-engines-nav">
         <h2>My favorite search engines</h2>
@@ -160,5 +166,10 @@
         </div>
       </article>
     </main>
+
+    <div class="example-container">
+      <a class="transition-example-link" href="">Click me</a>
+      <div class="hidden-sibling">You cant see me?</div>
+    </div>
   </body>
 </html>
