Finishing up html/css course examples

--- a/about.html
+++ b/about.html
@@ -59,6 +59,8 @@
       }
 
       .text-3 {
+        position: relative;
+        z-index: 4;
         margin: 20px 10px;
         background-color: red;
       }
